--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "export": "npm run build && next export -o _static"
   },
   "dependencies": {
+    "emailjs-com": "^3.2.0",
     "eslint-config-next": "13.0.3",
     "framer-motion": "^7.6.7",
     "next": "13.0.3",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-dropzone": "^14.2.3"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
